<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkbox">CheckBox</string>
    <string name="place_holder">Place holder</string>
    <string name="new_task">New Task</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="select_time">SELECT TIME</string>
    <string name="save">SAVE</string>
</resources>